--- a/src/css/index.css
+++ b/src/css/index.css
@@ -148,9 +148,84 @@
 #bigbox #mokuai2 #banner #photo {
   width: 100%;
   height: 596px;
-  background: lightsalmon;
-  border-radius: 0 0 15% 15%;
   position: relative;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > div {
+  width: 100%;
+  height: 596px;
+  border-radius: 0 0 15% 15%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > .activephoto {
+  opacity: 1;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > div:nth-child(1) {
+  background: url(../img/banner1.jpg) no-repeat 0 center;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > div:nth-child(2) {
+  background: url(../img/banner2.jpg) no-repeat 0 center;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > div:nth-child(3) {
+  background: url(../img/banner3.jpg) no-repeat 0 center;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > div:nth-child(4) {
+  background: url(../img/banner4.jpg) no-repeat 0 center;
+}
+#bigbox #mokuai2 #banner #photo > .justphoto > div:nth-child(5) {
+  background: url(../img/banner5.jpg) no-repeat 0 center;
+}
+#bigbox #mokuai2 #banner #photo > div:nth-child(2),
+#bigbox #mokuai2 #banner #photo div:nth-child(3) {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  font-size: 20px;
+}
+#bigbox #mokuai2 #banner #photo > div:nth-child(2) > a,
+#bigbox #mokuai2 #banner #photo div:nth-child(3) > a {
+  text-decoration: none;
+  color: white;
+}
+#bigbox #mokuai2 #banner #photo > div:nth-child(2) {
+  top: 50%;
+  left: 1385px;
+}
+#bigbox #mokuai2 #banner #photo > div:nth-child(3) {
+  top: 50%;
+  left: 325px;
+  transform: rotate(180deg);
+}
+#bigbox #mokuai2 #banner #photo > div:nth-child(2):hover,
+#bigbox #mokuai2 #banner #photo div:nth-child(3):hover {
+  background: #333;
+  opacity: 0.5;
+}
+#bigbox #mokuai2 #banner #photo > ul {
+  list-style: none;
+  position: absolute;
+  top: 520px;
+  left: 1155px;
+}
+#bigbox #mokuai2 #banner #photo > ul > .active {
+  background: #fff;
+}
+#bigbox #mokuai2 #banner #photo > ul > li {
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 50%;
+  float: left;
+  margin-left: 15px;
+}
+#bigbox #mokuai2 #banner #photo > ul > li > a {
+  text-decoration: none;
 }
 #bigbox #mokuai2 #banner #show {
   width: 1200px;
@@ -167,6 +242,7 @@
   border-radius: 10px;
   background: white;
   position: absolute;
+  box-shadow: 0 2px 26px rgba(0, 0, 0, 0.07);
 }
 #bigbox #mokuai2 #banner #show .register > div:first-child {
   width: 300px;
@@ -598,7 +674,7 @@
 }
 #bigbox #mokuai2 #banner #show div:nth-child(6) > div:last-child > .tenphoto > #tenphotoone {
   width: 220px;
-  height: 322px;
+  height: 430px;
 }
 #bigbox #mokuai2 #banner #show div:nth-child(6) > div:last-child > .tenphoto > #tenphotoone > .tenphotoa {
   width: 220px;
@@ -610,7 +686,7 @@
 }
 #bigbox #mokuai2 #banner #show div:nth-child(6) > div:last-child > .tenphoto > li {
   width: 220px;
-  height: 322px;
+  height: 430px;
 }
 #bigbox #mokuai2 #banner #show div:nth-child(6) > div:last-child > .tenphoto > li > a {
   width: 100%;
@@ -639,7 +715,7 @@
   font-size: 13px;
   color: #777;
   text-align: center;
-  margin-top: 90px;
+  margin-top: 190px;
 }
 #bigbox #mokuai2 #banner #show div:nth-child(6) > div:last-child > .tenphoto > li > a > p:nth-child(4) {
   font-size: 12px;
