--- a/src/css/index.less
+++ b/src/css/index.less
@@ -166,10 +166,85 @@
             #photo{
                 width: 100%;
                 height: 596px;
-                background: lightsalmon;
-                border-radius: 0 0 15% 15%; 
                 position: relative;
+                &>.justphoto{
+                    &>div{
+                    width: 100%;
+                    height: 596px;
+                    border-radius: 0 0 15% 15%; 
+                    overflow: hidden;
+                    position: absolute;
+                    top: 0;left: 0;
+                    opacity: 0;
+                    }
+                    &>.activephoto{
+                        opacity: 1;
+                    }
+                    &>div:nth-child(1){
+                        background: url(../img/banner1.jpg) no-repeat 0 center;
+                    }
+                    &>div:nth-child(2){
+                        background: url(../img/banner2.jpg) no-repeat 0 center;
+                    }
+                    &>div:nth-child(3){
+                        background: url(../img/banner3.jpg) no-repeat 0 center;
+                    }
+                    &>div:nth-child(4){
+                        background: url(../img/banner4.jpg) no-repeat 0 center;
+                    }
+                    &>div:nth-child(5){
+                        background: url(../img/banner5.jpg) no-repeat 0 center;
+                    }
+                }
+                
+                &>div:nth-child(2),div:nth-child(3){
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    line-height: 50px;
+                    text-align: center;
+                    position: absolute;
+                    font-size: 20px;
+                    &>a{
+                        text-decoration: none;
+                        color: white;
+                    }
+                }
+                &>div:nth-child(2){
+                    top: 50%;
+                    left: 1385px;
+                }
+                &>div:nth-child(3){
+                    top: 50%;
+                    left: 325px;
+                    transform: rotate(180deg);
+                }
+                &>div:nth-child(2):hover,div:nth-child(3):hover{
+                    background: #333;
+                    opacity: .5;
+                }
+                &>ul{
+                    list-style: none;
+                    position: absolute;
+                    top: 520px;
+                    left: 1155px;
+                    &>.active{
+                        background: #fff;
+                    }
+                    &>li{
+                        width: 20px;
+                        height: 20px;
+                        border: 1px solid white;
+                        border-radius: 50%;
+                        float: left;
+                        margin-left: 15px;
+                        &>a{
+                            text-decoration: none;
+                        }
+                    }
+                }
             }
+            
             
             //产品展示区
             #show{
@@ -187,7 +262,8 @@
                     height: 99px;
                     border-radius: 10px;
                     background: white;
-                    position: absolute;
+                    position: absolute;    
+                    box-shadow: 0 2px 26px rgba(0,0,0,0.07);
                     // display: flex;
                     // justify-content: space-between;
 
@@ -656,7 +732,7 @@
                             justify-content: space-between;
                             &>#tenphotoone{
                                 width: 220px;
-                                height: 322px;
+                                height: 430px;
                                 &>.tenphotoa{
                                     width: 220px;
                                     height: 322px;
@@ -668,7 +744,7 @@
                             }
                             &>li{
                                 width: 220px;
-                                height: 322px;
+                                height: 430px;
                                 &>a{
                                     width: 100%;
                                     height: 100%;
@@ -695,7 +771,7 @@
                                         font-size: 13px;
                                         color: #777;
                                         text-align: center;
-                                        margin-top: 90px;
+                                        margin-top: 190px;
                                     }
                                     &>p:nth-child(4){
                                         font-size: 12px;
